# rrun

./: .travis.yml  Cargo.toml  Makefile  README.md  README.rst  install_gtk.sh  rustfmt.toml
debian/: README  README.Debian  README.source  changelog  control  copyright  docs  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rrun.cron.d.ex  rrun.default.ex  rrun.doc-base.EX  rules  watch.ex
src/: ac_manager.rs  autocomplete.rs  bashautocompleter.rs  config.toml  engine.rs  execution.rs  externalautocompleter.rs  externalrunner.rs  historyautocompleter.rs  main.rs  rrun.glade  runner.rs
