[package]
name = "rrun"
version = "0.0.6"
authors = ["me@bstr.eu"]
repository = "https://github.com/buster/rrun"
keywords = ["gtk", "tool", "bash"]
license = "GPL-3.0+"
description = "minimalistic command launcher in rust similar to gmrun"

[dependencies]
log = "*"
env_logger = "*"
glib = "^0"
gdk = "^0"
gtk = "^0"
cairo-rs = "^0"

[features]
default = ["search_entry"]
search_entry = []

[[bin]]
name = "rrun"
