[package]
name = "rrun"
version = "0.2.3"
authors = ["me@bstr.eu"]
repository = "https://github.com/buster/rrun"
keywords = ["gtk", "tool", "bash"]
license = "GPL-3.0+"
description = "minimalistic command launcher in rust similar to gmrun"
exclude = [
        "Makefile",
        "debian/*",
        ".travis.yml",
        "rrun.1",
        "rrun.gif",
        ]

[dependencies.gtk]
version = "0.3.0"
features = ["v3_10"]

[dependencies]
log = "^0"
env_logger = "^0"
glib = "0.4.1"
gdk = "0.7.0"
#cairo-rs = "0.3.0"
toml = "^0"
itertools = "^0"
regex = "^0"
clap = "^2"

[[bin]]
name = "rrun"
